--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -14,7 +14,7 @@ In this part, the following questions will be answered:
 Zend\Db and PHP Array, and may output to multiple formats also like [jqGrid](http://jqgrid.com/), [Bootstrap](http://getbootstrap.com/), 
 CLI, PDF and Excel... and others.
 
-## Features of ZfcDatagrid?
+## Features of ZfcDatagrid
 
 * Multiple Datasources: 
   * Doctrine2 (QueryBuilder + Collections)
