--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -5,7 +5,7 @@ Welcome to the official documentation of ZfcDatagrid!
 In this part, the following questions will be answered:
 
 * What is ZfcDatagrid?
-* Features of ZfcDatagrid?
+* What is the features of ZfcDatagrid?
 
 ## What is ZfcDatagrid?
 
