--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -10,9 +10,12 @@ In this part, the following questions will be answered:
 ## What is ZfcDatagrid?
 
 [ZfcDatagrid](https://github.com/ThaDafinser/ZfcDatagrid/) is a datagrid or datatable module for 
-[Zend Framework 2](https://github.com/zendframework/zf2/), it can handle multiple data sources like [Doctrine2](http://www.doctrine-project.org/), 
-Zend\Db and PHP Array, and may output to multiple formats also like [jqGrid](http://jqgrid.com/), [Bootstrap](http://getbootstrap.com/), 
-CLI, PDF and Excel... and others.
+[Zend Framework 2](https://github.com/zendframework/zf2/), it can handle multiple data sources like 
+[Doctrine2](http://www.doctrine-project.org/), 
+Zend\Db and PHP Array, and may output to multiple formats also like [jqGrid](http://jqgrid.com/), 
+[Bootstrap](http://getbootstrap.com/),  CLI, PDF and Excel... and others.
+
+So to clarify, ZfcDatagrid is NOT a CRUD abstraction, it's here to read data from different sources and display it in different output formats
 
 ## Features of ZfcDatagrid
 
