Update 02. Quick Start.md

--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -5,6 +5,7 @@ In this part, we will learn the following:
 * Requirements
 * Installation
 * Configuration
+* Basic Example
 
 ## Requirements
 
@@ -13,6 +14,9 @@ In this part, we will learn the following:
 
 ### Optional Requirements
 - [DoctrineORMModule](https://github.com/doctrine/DoctrineORMModule): if you want to use Doctrine as datasource.
+- [Bootstrap](http://getbootstrap.com/): if you want to output Bootstrap table.
+- [Date Range Picker](https://github.com/dangrossman/bootstrap-daterangepicker): if you want to use the Date Range Picker on Bootstrap Table.
+- [jqGrid](http://jqgrid.com/): if you want to output jqGrid.
 
 ## Installation
 
@@ -27,9 +31,58 @@ $ php composer.phar require thadafinser/zfc-datagrid:dev-master
 Enable the module by adding `ZfcDatagrid` key to your `application.config.php` file. Customize the module by copy-pasting
 the `zfcdatagrid.local.php.dist` file to your `config/autoload` folder.
 
-Finally create the folder: `data/ZfcDatagrid` which will be used by ZfcDatagrid for caching.
+Create the folder: `data/ZfcDatagrid` which will be used by ZfcDatagrid for caching.
+
+Finally include the JS/CSS/Images files of the output that you want to use (Bootstrap files, jqGrid files...), the links of the required 
+files are in the [Requirements](/docs/02. Quick Start.md#requirements)
 
 ## Configuration
 
 Here goes the configuration options...
 
+## Basic Example
+
+The first datagrid is a really simple one, to see if everything works for you. 
+It'll work if you have ZF2-Skeleton installed or Twitter Bootstrap included out of the box.
+
+If you copy the following code and paste it into your action, try to call this action (with your defined route) and you should see your 
+first ZfcDatagrid! (Congratulations) It's renderer with the output mode "bootstrapTable", where you can already paginate, filter and sort your data.
+
+
+```php
+<?php
+namespace Application\Controller;
+
+use Zend\Mvc\Controller\AbstractActionController;
+use ZfcDatagrid\Column;
+
+class IndexController extends AbstractActionController
+{
+
+    /**
+     * Simple bootstrap table
+     *
+     * @return \ZfcDatagrid\Controller\ViewModel
+     */
+    public function bootstrapAction ()
+    {
+        $data = array(
+            'displayName' => 'Wayne? John!',
+            'displayName' => 'Mohammad ZeinEddin'
+        );
+        
+        /* @var $grid \ZfcDatagrid\Datagrid */
+        $grid = $this->getServiceLocator()->get('ZfcDatagrid\Datagrid');
+        $grid->setTitle('Minimal grid');
+        $grid->setDataSource($data);
+        
+        $col = new Column\Select('displayName');
+        $col->setLabel('Name');
+        $grid->addColumn($col);
+        
+        $grid->render();
+        
+        return $grid->getResponse();
+    }
+}
+```
