Update 02. Quick Start.md

--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -67,9 +67,9 @@ class IndexController extends AbstractActionController
     public function bootstrapAction ()
     {
         $data = array(
-            'displayName' => 'Mohammad ZeinEddin',
-            'displayName' => 'John Wayne',
-            'displayName' => 'Oprah Winfrey'
+            array ('displayName' => 'Mohammad ZeinEddin'),
+            array ('displayName' => 'John Wayne'),
+            array ('displayName' => 'Oprah Winfrey')
         );
         
         /* @var $grid \ZfcDatagrid\Datagrid */
