--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -37,3 +37,8 @@ So to clarify, ZfcDatagrid is NOT a CRUD abstraction, it's here to read data fro
 * external data can be included to the dataset (like gravator or any other)
 * pagination
 * custom toolbar / view
+
+### Navigation
+
+* Continue to [the **Quick Start**](/docs/02. Quick Start.md)
+* Back to [the Index](/docs/README.md)
