--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -87,3 +87,9 @@ class IndexController extends AbstractActionController
     }
 }
 ```
+
+### Navigation
+
+* Continue to [the **Columns**](/docs/03. Columns.md)
+* Back to [the Introduction](/docs/01. Introduction.md)
+* Back to [the Index](/docs/README.md)
