Update 02. Quick Start.md

--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -38,7 +38,77 @@ files are in the [Requirements](/docs/02. Quick Start.md#requirements)
 
 ## Configuration
 
-Here goes the configuration options...
+There are a lot of configurations you can override to customize the behaviour of your grid implementation.
+
+You can find all options here (all options inside "ZfcDatagrid") https://github.com/ThaDafinser/ZfcDatagrid/blob/master/config/module.config.php
+
+To override the configuration you should create a own config file for this module. Create: config/autoload/zfcdatagrid.local.php
+
+Following configs are currently available (taken from config/module.config.php):
+
+```php
+return array(
+    'ZfcDatagrid' => array(
+        
+        'settings' => array(
+            
+            'default' => array(
+                'renderer' => array(
+                    'http' => 'bootstrapTable',
+                    'console' => 'zendTable'
+                )
+            ),
+            
+            'export' => array(
+                'enabled' => true,
+                
+                // currently only A formats are supported...
+                'papersize' => 'A4',
+                
+                // landscape / portrait (we preferr landscape, because datagrids are often wide)
+                'orientation' => 'landscape',
+                
+                'formats' => array(
+                    // renderer -> display Name (can also be HTML)
+                    'PHPExcel' => 'Excel',
+                    'tcpdf' => 'PDF'
+                ),
+                
+                // The output+save directory
+                'path' => 'public/download',
+                
+                'mode' => 'direct'
+            )
+        ),
+        
+        'cache' => array(
+            
+            'adapter' => array(
+                'name' => 'Filesystem',
+                'options' => array(
+                    'ttl' => 720000, // cache with 200 hours,
+                    'cache_dir' => 'data/ZfcDatagrid'
+                )
+            ),
+            'plugins' => array(
+                'exception_handler' => array(
+                    'throw_exceptions' => false
+                ),
+                
+                'Serializer'
+            )
+        ),
+        
+        'renderer' => array(
+            'jqGrid' => array(
+                'templates' => array(
+                    'layout' => 'zfc-datagrid/renderer/jqGrid/layout'
+                )
+            )
+        )
+    )
+);
+```
 
 ## Basic Example
 
