Update 02. Quick Start.md

--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -44,7 +44,7 @@ You can find all options here (all options inside "ZfcDatagrid") https://github.
 
 To override the configuration you should create a own config file for this module. Create: config/autoload/zfcdatagrid.local.php
 
-Following configs are currently available (taken from config/module.config.php):
+Following configs are some of the currently available (taken from config/module.config.php):
 
 ```php
 return array(
