--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -128,6 +128,6 @@ $grid->addColumn($col);
 
 ### Navigation
 
-* Continue to [**Columns**](/docs/04. Filtering.md)
-* Back to [Filtering](/docs/02. Quick Start.md)
+* Continue to [**Filtering**](/docs/04. Filtering.md)
+* Back to [Quick Start](/docs/02. Quick Start.md)
 * Back to [the Index](/docs/README.md)
