--- a/docs/02. Quick Start.md
+++ b/docs/02. Quick Start.md
@@ -160,6 +160,6 @@ class IndexController extends AbstractActionController
 
 ### Navigation
 
-* Continue to [the **Columns**](/docs/03. Columns.md)
-* Back to [the Introduction](/docs/01. Introduction.md)
+* Continue to [**Columns**](/docs/03. Columns.md)
+* Back to [Introduction](/docs/01. Introduction.md)
 * Back to [the Index](/docs/README.md)
