--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -40,5 +40,5 @@ So to clarify, ZfcDatagrid is NOT a CRUD abstraction, it's here to read data fro
 
 ### Navigation
 
-* Continue to [the **Quick Start**](/docs/02. Quick Start.md)
+* Continue to [**Quick Start**](/docs/02. Quick Start.md)
 * Back to [the Index](/docs/README.md)
