--- a/docs/04. Filtering.md
+++ b/docs/04. Filtering.md
@@ -1,4 +1,4 @@
-# Filtering the grid
+# Filtering
 
 Every grid comes per default with a column filtering. 
 Dependend of the entered filtering values, the operator for the filtering will change.
