--- a/docs/04. Filtering.md
+++ b/docs/04. Filtering.md
@@ -44,3 +44,10 @@ $column->setType($dateType);
 | BETWEEN value1 AND value2  | `value1 <> value2`           | between two values |
 | IN (value1, value2, ...) | `=(1,2)`                       | value inside the given values |
 | NOT IN (value1, value2, ...)  | `!=(1,2,3)                | value not inside the given values |
+
+
+
+### Navigation
+
+* Back to [Quick Start](/docs/03. Columns.md)
+* Back to [the Index](/docs/README.md)
