--- a/docs/04. Filtering.md
+++ b/docs/04. Filtering.md
@@ -49,5 +49,5 @@ $column->setType($dateType);
 
 ### Navigation
 
-* Back to [Quick Start](/docs/03. Columns.md)
+* Back to [Columns](/docs/03. Columns.md)
 * Back to [the Index](/docs/README.md)
