--- a/docs/04. Filtering.md
+++ b/docs/04. Filtering.md
@@ -49,5 +49,6 @@ $column->setType($dateType);
 
 ### Navigation
 
+* Continue to [**Toolbar and Custom Filtering**](/docs/05. Toolbar and Custom Filtering.md)
 * Back to [Columns](/docs/03. Columns.md)
 * Back to [the Index](/docs/README.md)
