--- a/docs/05. Toolbar and Custom Filtering.md
+++ b/docs/05. Toolbar and Custom Filtering.md
@@ -1,1 +1,7 @@
 # Toolbar and Custom Filtering
+
+### Navigation
+
+* Continue to [**Exporting**](/docs/05. Exporting.md)
+* Back to [Filtering](/docs/03. Filtering.md)
+* Back to [the Index](/docs/README.md)
