--- a/docs/06. Exporting.md
+++ b/docs/06. Exporting.md
@@ -1,1 +1,8 @@
 # Exporting
+
+
+### Navigation
+
+* Continue to [**Other Usage**](/docs/07. Other Usage.md)
+* Back to [Exporting](/docs/05. Toolbar and Custom Filtering.md)
+* Back to [the Index](/docs/README.md)
