--- a/docs/01. Introduction.md
+++ b/docs/01. Introduction.md
@@ -41,4 +41,5 @@ So to clarify, ZfcDatagrid is NOT a CRUD abstraction, it's here to read data fro
 ### Navigation
 
 * Continue to [**Quick Start**](/docs/02. Quick Start.md)
+* Back to [Introduction](/docs/01. Introduction.md)
 * Back to [the Index](/docs/README.md)
