add more documentation

--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -1,22 +1,173 @@
 # Columns
-The column definition is a central part of ZfcDatagrid.
 
-There are currently 3 types of columns: `Action`, `ExternalData` and `Select`
-Most time you will use `Select`, which just says that this column will use data from your defined datasource.
-`ExternalData` column is used, if you want to enhance your dataset with external data like the image from gravatar.
-`Action` is like the name says for row actions.
+In this part, we will learn the following:
 
-A minimal column looks like
+* Columns Introduction
+* Column Types
+  * Select
+  * Action
+    * Button
+    * Checkbox
+    * Icon
+    * Actions Options
+  * ExternalData
+  * Columns Options
+* Column Data Types
+  * String
+  * DateTime
+  * Image
+  * Number
+  * PhpArray
+* Column Data Styles
+  * Background color
+  * Bold
+  * Color
+  * Italic
+* Column Data Formatters
+  * Email
+  * File Size
+  * Image Formatter
+  * Link
+
+## Columns Introduction
+
+The column definition is a central part of ZfcDatagrid, they are used to tell the grid what columns to display and how to display them.
+
+A minimal column definition looks like this:
 ```php
 use ZfcDatagrid\Column;
 
-$col = new Column\Select('displayName');
-$col->setLabel('Displayname');
+$col = new Column\Select('columnDataKey');
+$col->setLabel('Display Name');
 $grid->addColumn($col);
 ```
 
-## Options
-All 3 column types share together an abstract class, there following options are possible:
+## Column Types
+The column type is the basic object that is created and added to the ZfcDatagrid to contruct the grid table, you can choose between `Action`, `ExternalData` and `Select` column types.
+
+### Select
+The following is an example of a select column type:
+```php
+$col = new Column\Select('columnDataKey');
+```
+
+You can also use the select column to display data from database table (Doctrine...), and you can pass an alias for the table as the following:
+```php
+$col = new Column\Select('databaseColumnName', 'tableNameOrAlias');
+```
+If you are using **Doctrine** you can use select column type with a Query Select expression as the following example:
+```php
+use ZfcDatagrid\Column;
+use Doctrine\ORM\Query\Expr;
+
+$querySelect = new Expr\Select("concat(first_name, ' ', last_name)");
+$col = new Column\Select($querySelect, 'full_name');
+```
+
+### Action
+The actions are special type of columns that will only be shown on HTML renderer, the action column takes one or more actions and display them in one column. Creating an Action column is same as creating a select column, the difference is that it takes actions objects instead of data to display in the grid.
+
+See the following is an example of button action, first you need to craete action and then you add the action to action folumn as the following:
+```php
+use ZfcDatagrid\Column;
+
+$viewAction = new Column\Action\Button();
+$viewAction->setLabel('View');
+$viewAction->setLink('view/url/id');
+
+$actions = new Column\Action();
+$actions->setLabel('');
+$actions->addAction($viewAction);
+$grid->addColumn($actions);
+```
+
+The following are the available actions available in ZfcDatagrid:
+
+#### Button
+Button action is a simple link that is displayed as button using Bootstrap classes, to create a button and to know the available options see the following:
+```php
+use ZfcDatagrid\Column;
+
+//Create the button action
+$btn = new Column\Action\Button();
+
+//Set the lable of the button
+$btn->setLabel('View');
+```
+More options and manipulation can be applied to Button are in the [Actions Options](/docs/03. Columns.md#action-options) bellow.
+
+#### Checkbox
+Checkbox action is a checkbox html, the value of the checkbox will be a unique row id of the grid. To create a checkbox action and to know the available options see the following:
+```php
+use ZfcDatagrid\Column;
+
+//Create the Checkbox action
+$chkbox = new Column\Action\Checkbox($checkboxName);
+```
+More options and manipulation can be applied to Checkbox are in the [Actions Options](/docs/03. Columns.md#action-options) bellow.
+
+#### Icon
+Icon action is either an HTML **img** element with image, or an HTML **i** element with Bootstrap icon class. To create either of them see the following:
+```php
+use ZfcDatagrid\Column;
+
+//Create the Icon action
+$icon = new Column\Action\Icon();
+
+//Set the bootstrap icon class name
+$icon->setIconClass('glyphicon glyphicon-remove');
+//OR
+//Set the icon image source
+$icon->setIconLink('path/to/icon/image');
+```
+More options and manipulation can be applied to Icon are in the [Actions Options](/docs/03. Columns.md#action-options) bellow.
+
+#### Action Options
+The following options are common for all actions:
+```php
+use ZfcDatagrid\Filter;
+
+//Set the link of the click on the button
+$btn->setLink('url');
+
+//Set html attribute value
+$btn->setAttribute('id' ,'linkHtmlId');
+
+//Set the html title attribute
+$btn->setTitle('View Details');
+
+//Add css class to the html link
+$btn->addClass('class-name');
+
+//Set when to display the action condition, for example this
+//display the action when column value = 1
+$btn->addShowOnValue($columnToCompate, 1, Filter::EQUAL);
+
+//When adding multiple show on value conditions, you can
+//specify if the check of all conditions is 'OR' or 'AND'
+$btn->setShowOnValueOperator('OR');
+```
+
+### ExternalData
+The ExternalData action is an action that is rendered using one of the `Column\DataPopulation` methods, the following example uses `Column\DataPopulation\Object\Gravatar` to render the action:
+
+```php
+use ZfcDatagrid\Column;
+
+$colEmail = new Column\Select('email');
+
+$dataPopulation = new Column\DataPopulation\Object();
+$dataPopulation->setObject(new Column\DataPopulation\Object\Gravatar());
+$dataPopulation->addObjectParameterColumn('email', $colEmail);
+
+$col = new Column\ExternalData('avatar');
+$col->setLabel('Avatar');
+$col->setType(new Type\Image());
+$col->setDataPopulation($dataPopulation);
+```
+
+### Columns Options
+All column types share together an abstract class, there following options are possible:
 ```php
 use ZfcDatagrid\Column;
 use ZfcDatagrid\Column\Formatter;
@@ -108,23 +259,40 @@ $col->setRowClickDisabled($bool);
 $grid->addColumn($col);
 ```
 
+## Column Data Types
 
+The column data types are used to convert the value from the data source to the value that will appear in the grid table.
 
+### DateTime
 
+### Image
 
+### Number
 
-Advanced
-```php
-use ZfcDatagrid\Column;
+### PhpArray
+  
+## Column Data Styles
 
-$col = new Column\Select('displayName', 'tableNameOrAlias');
-$col->setLabel('Displayname');
-$col->setWidth(25);
-$col->setSortDefault(1, 'ASC');
-$col->addStyle(new Style\Bold());
-$grid->addColumn($col);
-```
+The column data styles are used to give styles for the data, you can apply styles like bold, add color, make italic and other styles.
 
+### Background color
+
+### Bold
+
+### Color
+
+### Italic
+
+## Column Data Formatters
+The column data formatters are custom formatters used to format the value from the datasource to be displayed in the grid table.
+
+### Email
+
+### File Size
+
+### Image Formatter
+
+### Link
 
 ### Navigation
 
