Complete columns and columns related classes documenation

--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -401,12 +401,40 @@ $style->addByValue($col, 40, Filter::LESS_EQUAL);
 The column data formatters are custom formatters used to format the value from the datasource to be displayed in the grid table.
 
 ### Email
+The Email formatter displays a mailto link to the email, to use it do the following:
+```php
+$col->setFormatter(new Formatter\Email());
+```
 
 ### File Size
+The FileSize formatter displays a number as a file size with a letter that indicates the size unit (K=>Kilobyte, M=>Megabyte, ...etc), to use it do the following:
+```php
+$col->setFormatter(new Formatter\FileSize());
+```
 
 ### Image Formatter
+The Image formatter displays a linkable image HTML tags, the link will be to the pointing to the image, a usage example is like the following:
+```php
+$imageFormatter = new Formatter\Image();
+
+//Set the prefix of the image path and the prefix of the link
+$imageFormatter->setPrefix('path/prefix/');
+
+//set <img> attributes like this:
+$imageFormatter->setAttribute('alt', 'Image Alt');
+
+//set <a> attributes of the image like this:
+$imageFormatter->setLinkAttribute('title', 'View Full Image');
+
+//apply the style on the column $col
+$col->setFormatter($imageFormatter);
+```
 
 ### Link
+The Link formatter displays a column content as an HTML link with value and href is the column content, to use it do the following:
+```php
+$col->setFormatter(new Formatter\Link());
+```
 
 ### Navigation
 
