Propose a way to set/add global actions, and a way to fill the middle toolbar area, for filtering purposes for example. Also update the documenation to include the done modifications

--- a/docs/05. Toolbar and Custom Filtering.md
+++ b/docs/05. Toolbar and Custom Filtering.md
@@ -1,5 +1,68 @@
 # Toolbar and Custom Filtering
 
+In this part, we will learn the following:
+
+* Introduction
+* Global Actions
+* Custom Filtering (Middle Toolbar Template)
+* Export Links
+* Use Custome Toolbar
+
+## Introduction
+
+In the ZfcDatagrid, there is an area above the grid table that is used for many purposes,
+mainly there are 3 areas above the grid table, one for Global Actions, the middle for custom
+toolbars or cutome filtering area, and the last one for export links. Details for each one 
+are explained bellow.
+
+## Global Actions
+
+You can add global actions to the grid, which is an array of a `$name => $url` structure,
+the grid will display these links above the grid table, bellow is an example on how to use
+the global actions:
+
+You can set the global actions for once like the following:
+```php
+$globalActions = array (
+    'Add New' => 'url/of/add',
+    'Go Back' => 'url/of/back/link'
+);
+$grid->setGlobalAction($globalActions);
+```
+
+Or you can add one global action everytime you want as the following:
+```php
+$grid->addGlobalAction('Add New', 'url/of/add');
+$grid->addGlobalAction('Go Back', 'url/of/back/link');
+```
+
+## Custom Filtering (Middle Toolbar Template)
+
+In the middle area you can add any view template you want which will be rendered using the
+Zend Framework 2 `partial` view helper. 
+
+For example you can add a custom form in a view template and view it in this middle area, but
+notice that you will be responsible to get the variables from the form in the controller
+action and handle the filtering of the Datasource of the Grid.
+
+To set a view template in the toolbar middle area you can do the following:
+```php
+$grid->setMiddleToolbarTemplate('my-path/to/view-template');
+```
+
+## Export Links
+
+For the last area, the export links will be displayed in it, for example the export to `Excel`
+and export to `PDF` will be displayed in it.
+
+## Use Custome Toolbar
+
+You can also use your own toolbar to be displayed above the grid table, and you can set the
+custom toolbar using the following method:
+```php
+$grid->setToolbarTemplate('my-path/awesome-list/grid-toolbar');
+```
+
 ### Navigation
 
 * Continue to [**Exporting**](/docs/06. Exporting.md)
