add documentation for the toolbar and custom filtering

--- a/docs/05. Toolbar and Custom Filtering.md
+++ b/docs/05. Toolbar and Custom Filtering.md
@@ -1,5 +1,145 @@
 # Toolbar and Custom Filtering
 
+In this part, we will learn the following:
+
+* Introduction
+* Use Custome Toolbar
+* Toolbar Variables
+* Custome Toolbar Example
+* Custome Filtering
+
+## Introduction
+
+In the ZfcDatagrid, there is an area above the grid table which by default contains only 
+the export links, but you can use a custom toolbar to be used for many purposes,
+like adding global actions, adding cutome filtering form, adding export links, and whatever
+you want. Details on how to do this explained bellow.
+
+## Use Custome Toolbar 
+
+To use a custom toolbar instead the default one you can do the following:
+* Create a file that you will use as your toolbar, let us say that the file is in 
+`module/Application/view/layout` directory and is called `my-datagrid-toolbar.phtml`
+* Copy the file `config/zfcdatagrid.local.php.dist` to your project directory
+`config/autoload` and rename it to `zfcdatagrid.local.php`
+* Edit the fine `zfcdatagrid.local.php` and add the following under the `'renderer'`
+configuration key as the following:
+```php
+'renderer' => array(
+    'bootstrapTable' => array(
+        'templates' => array(
+            'toolbar' => 'view/layout/my-datagrid-toolbar.phtml'
+        )
+    ),
+)
+```
+By this the `ZfcDatadrig` will use the file `my-datagrid-toolbar.phtml` as a global
+toolbar, i.e. it will be rendered for all of the grids in you application.
+
+## Custom Filtering (Middle Toolbar Template)
+
+In the middle area you can add any view template you want which will be rendered using the
+Zend Framework 2 `partial` view helper. 
+
+For example you can add a custom form in a view template and view it in this middle area, but
+notice that you will be responsible to get the variables from the form in the controller
+action and handle the filtering of the Datasource of the Grid.
+
+To set a view template in the toolbar middle area you can do the following:
+```php
+$grid->setMiddleToolbarTemplate('my-path/to/view-template');
+```
+
+## Toolbar Variables
+
+You can set variables for your custom toolbar as the following:
+```php
+$grid->setToolbarTemplateVariables(['myVariable' => 123]);
+```
+and then in your toolbar you can use the variable directly as
+`$myVariable` or `$this->myVariable`
+
+
+## Custome Toolbar Example
+
+The following is an example of a toolbar, in which we make use of the module original
+export toolbar. In this example we devided the toolbar into 3 parts, the first can be
+used for global actions, the second can be used for filtering forms, and the last is
+used for the module export links:
+```php
+<div class="row row-fluid" style="margin-bottom: 5px;">
+    <!-- Actions (add, ...) -->
+    <div class="span3 col-md-3 text-left">
+        <?php if (isset($globalActions)) : ?>
+        <?php foreach ($globalActions as $globalActionName => $globalActionURL) : ?>
+        <a class="btn btn-primary btn-sm" href="<?php echo $globalActionURL; ?>">
+            <?php echo $globalActionName; ?>
+        </a>
+        <?php endforeach; ?>
+        <?php endif; ?>
+    </div>
+    
+    <!-- Anything else (filter, ...) -->
+    <div class="span6 col-md-6">
+        <?php if (isset($middleToolbarTemplate)) {echo $this->partial($middleToolbarTemplate);} ?>
+    </div>
+    
+    <!-- Export buttons -->
+    <div class="span3 col-md-3 text-right">
+        <?php echo $this->partial('zfc-datagrid/toolbar/export');?>
+    </div>
+</div>
+```
+In this example you can set the global actions like the following:
+```php
+$grid->setToolbarTemplateVariables(
+    ['globalActions' =>
+        [$this->translate('New User') =>
+            $this->url()->fromRoute('application', array('controller' => 'user', 'action' => 'add'))
+        ]
+    ]
+);
+```
+And you can set a filtering form in the middle of the toolbar as the following:
+```php
+$grid->setMiddleToolbarTemplate('application/user/_user-filter.phtml');
+```
+
+## Custome Filtering
+
+After setting the middle area of the toolbar with a filtering form, the next step
+will be how to filter the datagrid, the current way to do that is by getting the
+form variables in your action and do the filtering by yourself, for example in the
+action you can do the following:
+```php
+public function listUsersAction()
+{
+	...
+    // Get the datasource to be used
+    $users = $this->getUsersDatasource();
+    
+    // Get the filtering form and check for submitted values
+    $username = 0;
+    $form = $this->getServiceLocator()->get('Application\Form\User\UserFilterForm');
+    $request = $this->getRequest();
+    if ($request->isPost()) {
+        $form->setData($request->getPost());
+        if ($form->isValid()) {
+            $username = $this->params()->fromPost('username', 0);
+        }
+    }
+    
+    // Do the filtering of your datasource based on the form variables
+    if ($username != 0) {
+    	// Filter the $users datasource
+    }
+    
+    // After filtering set the datasource of the grid:
+    $dataGrid->setDataSource($users);
+    ...
+}
+```
+
 ### Navigation
 
 * Continue to [**Exporting**](/docs/06. Exporting.md)
