Add Strikethrought to bootstrapTable render

--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -23,6 +23,8 @@ In this part, we will learn the following:
   * Bold
   * Color
   * Italic
+  * Align
+  * Strikethrough
   * Applying Style
 * Column Data Formatters
   * Email
