renamed Type\String in Type\PhpString for PHP7 Support

--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -13,7 +13,7 @@ In this part, we will learn the following:
   * ExternalData
   * Columns Options
 * Column Data Types
-  * String
+  * PhpString
   * DateTime
   * Image
   * Number
