--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -207,7 +207,7 @@ $col->setType(new Type\Image());
 
 //format the value with this formatter
 //many things are already good when using the right Type!
-$col->setFormatter(new Formatter\FileSize());
+$col->addFormatter(new Formatter\FileSize());
 
 //you can set different styles for columns
 //you can also combine multiple styles
@@ -255,7 +255,7 @@ $options = array('m' => 'male', 'f' => 'female');
 $col->setFilterSelectOptions($options);
 
 //only jqGrid currently (custom display)
-$col->setRendererParameter('formatter', '
+$col->setRendererParameter('formatters', '
     function (value, options, rowObject) {
     	//do something custom
     	return value;
@@ -401,19 +401,19 @@ $style->addByValue($col, 40, Filter::LESS_EQUAL);
 The column data formatters are custom formatters used to format the value from the datasource to be displayed in the grid table.
 
 ### Email
-The Email formatter displays a mailto link to the email, to use it do the following:
+The Email formatters displays a mailto link to the email, to use it do the following:
 ```php
-$col->setFormatter(new Formatter\Email());
+$col->setFormatters(new Formatter\Email());
 ```
 
 ### File Size
-The FileSize formatter displays a number as a file size with a letter that indicates the size unit (K=>Kilobyte, M=>Megabyte, ...etc), to use it do the following:
+The FileSize formatters displays a number as a file size with a letter that indicates the size unit (K=>Kilobyte, M=>Megabyte, ...etc), to use it do the following:
 ```php
-$col->setFormatter(new Formatter\FileSize());
+$col->setFormatters(new Formatter\FileSize());
 ```
 
 ### Image Formatter
-The Image formatter displays a linkable image HTML tags, the link will be to the pointing to the image, a usage example is like the following:
+The Image formatters displays a linkable image HTML tags, the link will be to the pointing to the image, a usage example is like the following:
 ```php
 $imageFormatter = new Formatter\Image();
 
@@ -427,13 +427,13 @@ $imageFormatter->setAttribute('alt', 'Image Alt');
 $imageFormatter->setLinkAttribute('title', 'View Full Image');
 
 //apply the style on the column $col
-$col->setFormatter($imageFormatter);
+$col->setFormatters($imageFormatter);
 ```
 
 ### Link
-The Link formatter displays a column content as an HTML link with value and href is the column content, to use it do the following:
+The Link formatters displays a column content as an HTML link with value and href is the column content, to use it do the following:
 ```php
-$col->setFormatter(new Formatter\Link());
+$col->setFormatters(new Formatter\Link());
 ```
 
 ### Navigation
