--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -199,7 +199,7 @@ $col->setWidth(20);
 $col->setHidden($bool);
 
 //set this as a `primaryKey` column (all identity columns will be used together as the ID for actions and rowIds)
-$col->setIdentity($bool); 
+$col->setIdentity($bool);
 
 //set the columnType. Default is string (other types see later)
 //types also changes things: change filtering, formatting, styling ...
@@ -283,8 +283,8 @@ To use the `DateTime` column data type you need to create a `Type\DateTime` obje
 The following is an example of how to use DateTime column data type:
 ```php
 $colType = new Type\DateTime(
-        'Y-m-d H:i:s', 
-        \IntlDateFormatter::MEDIUM, 
+        'Y-m-d H:i:s',
+        \IntlDateFormatter::MEDIUM,
         \IntlDateFormatter::MEDIUM
 	);
 $colType->setSourceTimezone('UTC');
@@ -332,7 +332,7 @@ $colTags->setLabel('Tags');
 $colTags->setType(new Type\PhpArray());
 ```
 You can change the separator by one of the following ways:
-```php 
+```php
 new Type\PhpArray(',');
 ```
 ```php
@@ -396,6 +396,12 @@ $style->addByValue($col, 20, Filter::GREATER_EQUAL);
 $style->addByValue($col, 40, Filter::LESS_EQUAL);
 ```
 
+You can also use another column's value to make the comparison:
+```php
+$style = new Style\Color(Style\Color::$GREEN);
+//Apply only when the value of the column $colPaid is greater or equal than the value of the column $colDue
+$style->addByValue($colPaid, $colDue, Filter::GREATER_EQUAL);
+```
 
 ## Column Data Formatters
 The column data formatters are custom formatters used to format the value from the datasource to be displayed in the grid table.
