--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -411,13 +411,13 @@ The column data formatters are custom formatters used to format the value from t
 ### Email
 The Email formatters displays a mailto link to the email, to use it do the following:
 ```php
-$col->setFormatters(new Formatter\Email());
+$col->addFormatter(new Formatter\Email());
 ```
 
 ### File Size
 The FileSize formatters displays a number as a file size with a letter that indicates the size unit (K=>Kilobyte, M=>Megabyte, ...etc), to use it do the following:
 ```php
-$col->setFormatters(new Formatter\FileSize());
+$col->setFormatters([new Formatter\FileSize()]);
 ```
 
 ### Image Formatter
@@ -435,13 +435,13 @@ $imageFormatter->setAttribute('alt', 'Image Alt');
 $imageFormatter->setLinkAttribute('title', 'View Full Image');
 
 //apply the style on the column $col
-$col->setFormatters($imageFormatter);
+$col->addFormatter($imageFormatter);
 ```
 
 ### Link
 The Link formatters displays a column content as an HTML link with value and href is the column content, to use it do the following:
 ```php
-$col->setFormatters(new Formatter\Link());
+$col->addFormatter(new Formatter\Link());
 ```
 
 ### Navigation
