Add the possibility to use another column's value to make the comparison

--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -150,6 +150,10 @@ $btn->addShowOnValue($columnToCompate, 1, Filter::EQUAL);
 //specify if the check of all conditions is 'OR' or 'AND'
 $btn->setShowOnValueOperator('OR');
 
+//You can also use another column's value to make the comparison
+//display only when the value of the column $colPaid is greater or equal than the value of the column $colDue
+$btn->addShowOnValue($columnPaid, $colDue, Filter::GREATER_EQUAL);
+
 //You can also get the current row ID value, and you may use it to set
 //the edit link or anything you want which depends on row ID like this:
 $rowId = $btn->getRowIdPlaceholder();
