--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -78,6 +78,9 @@ $viewAction = new Column\Action\Button();
 $viewAction->setLabel('View');
 $viewAction->setLink('view/url/id');
 
+//or set a dynamic column/row value as label
+$viewAction->setLabel($oneColumn);
+
 $actions = new Column\Action();
 $actions->setLabel('');
 $actions->addAction($viewAction);
