--- a/docs/03. Columns.md
+++ b/docs/03. Columns.md
@@ -44,6 +44,7 @@ $col = new Column\Select('columnDataKey');
 $col->setLabel('Display Name');
 $grid->addColumn($col);
 ```
+You can also use the [zfc-data-grid-plugin](https://github.com/agerecompany/zfc-data-grid-plugin) to create columns with an array configuration, instead of objects!
 
 ## Column Types
 The column type is the basic object that is created and added to the ZfcDatagrid to contruct the grid table, you can choose between `Action`, `ExternalData` and `Select` column types.
